       for a subfield Q(zeta_p^k) is now faster.
   64- intnumromb to use realbitprecision
   65- idealstar / ideallog: allow omitting 'nf' argument (for nf = Q; use
       znstar and znlog internally)
   66- improved p-adic log at high accuracy (O(sqrt(padicprec)) algorithm
       instead of O(padicprec))
   67- allow genus2red to handle (rational) non integral models
KR 68- new version of misc/xgp
BA 69- rename Flc_Fl_mul -> Flv_Fl_mul, Flc_Fl_div -> Flv_Fl_div,
       RgC_to_Flc to RgV_to_Flv, F2c_to_Flc to F2v_to_Flv
   70- rename leading_term -> leading_coeff, constant_term -> constant_coeff
   71- improve gamma(a+O(x))

Removed
   1- deprecated functions nfbasis0, nfdisc0, factorpadic0
   2- deprecated function manage_var
   3- useless function intnuminitgen (not very useful and impossible to use
      reliably together with intnum with boundary conditions)
   4- useless function intnumstep: instead of intnum(a,b, intnumstep()+m),
      use intnum(a,b,m).
   5- partially implemented functions intfouriercos / intfouriersin /
      intfourierexp / intlaplaceinv / intmellininv / intmellinvshort: use
      intnum (possibly intfuncinit). Make sure to indicate oscillating behaviour
      when function decrease slowly at oo
   6- optional flag to intfuncinit
BA 7- divide_conquer_prod: use gen_product instead
   8- useless function sumnumalt
   9- badly implemented functions zetakinit / zetak: the interface did not
      make sense (it is impossible to initialize for Dedekind zeta without
      specifying a domain where the function is to be evaluated). Closest
      equivalent to zetakinit:
        L = lfuninit(x^2+1, [c, w, h]);
      to compute zeta_Q(i)(s) for |Re(s - c)| < w, |Im(s)| < h. Then
        lfun(L, s)
      as an analog to zetak(). Or directly lfun(x^2+1, s) if a single value
      is needed. [#368, #1647]
BA10- [libpari] FpXQX_rem_Barrett, FpXQX_divrem_Barrett: use FpXQX_get_red
BA11- [libpari] FlxqX_rem_Barrett: use FlxqX_get_red