@@ -87,6 +87,7 @@ This file lists the incompatible changes between Version 2.x and older versions
   - rename Flc_Fl_mul -> Flv_Fl_mul, Flc_Fl_div -> Flv_Fl_div,
        RgC_to_Flc to RgV_to_Flv, F2c_to_Flc to F2v_to_Flv
   - rename leading_term -> leading_coeff, constant_term -> constant_coeff
+  - Z_to_Flx now takes a shifted variable number, as Fl_to_Flx.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.6 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - eval() no longer evaluates its arguments in "permissive" mode: eval("1a")
